# fgc-replay-miyoka

./: .dockerignore  .gitignore  Makefile  README.md  config.yaml.example  cors.json  deploy.ps1  pyproject.toml  record-replay.ps1  request.json  screenshot.ps1  setup.ps1  upload-replay.ps1
.github/workflows/: publish.yml
.streamlit/: config.toml
container_images/analyzer/: Dockerfile
container_images/viewer/: Dockerfile
docs/: analyzer.md  code_of_conduct.md  container_images.md  development.md  gcp.md  getting_started.md  how_to.md  overview.md  viewer.md
docs/getting_started/: sf6.md
miyoka/: container.py  customize-screen.py  export-config-to-dotenv.py  replay-analyzer.py  replay-recorder.py  replay-uploader.py  screenshot.py
miyoka/libs/: bigquery.py  cloud_run.py  exceptions.py  frame_splitter.py  game_window_helper.py  logger.py  replay_analyzer.py  replay_recorder.py  replay_uploader.py  replay_viewer_helper.py  round_analyzer.py  scene.py  scene_exporter.py  scene_splitter.py  scene_store.py  scene_vectorizer.py  screen_customizer.py  storages.py  utils.py
miyoka/sf6/: constants.py  game_window_helper.py  replay-viewer.py  replay_recorder.py  replay_uploader.py  round_analyzer.py  scene_splitter.py  scene_vectorizer.py  screen_customizer.py
miyoka/sf6/my_component/: __init__.py  example.py
miyoka/sf6/my_component/frontend/: package.json
miyoka/sf6/pages/: 1_chart.py  1_help.py  2_help.py
miyoka/sf6/templates/: README.md
miyoka/sf6/video_component/: __init__.py
miyoka/sf6/video_component/frontend/: package.json
(+4 files in other folders)
